--- a/style.css
+++ b/style.css
@@ -1,72 +1,53 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 body {
-     font-family: 'Outfit', sans-serif;
-     background-image: url(images/network-g8f69d8ce9_1920.png);
-     background-size: cover;
+	font-family: 'Outfit', sans-serif;
+	background-color: hsl(212, 45%, 89%);
 }
-.container {
-    width: 90%;
-    margin: 60px auto;
-    padding: 80px 0;
-    background-color: hsl(212, 45%, 89%);
-    box-shadow: rgb(98 98 98) -8px 8px 36px -9px;
-    display: flex;
-    align-items: center;
+main {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .box {
-    width: 20%;
-    margin: 0 auto;
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 0px 5px 20px 0px #00000036;
-    text-align: center;
+	padding: 1rem;
+	width: 20%;
+	border-radius: 10px;
+	background-color: white;
+	box-shadow: 0px 5px 20px 0px #00000036;
+	text-align: center;
 }
 .code img {
-    width: 100%;
-    border-radius: 10px;
+	width: 100%;
+	border-radius: 10px;
 }
-.desc {
-    padding: 10px 15px;
+.description {
+	padding: 10px 15px;
 }
-.desc h4 {
-    font-weight: 700;
-    font-size: 15px;
+.description h4 {
+	color: hsl(218, 44%, 22%);
+	font-weight: 700;
 }
-.desc p {
-    font-size: 10px;
-    font-weight: 400;
-    color: hsl(220, 15%, 55%);
-    margin-top: 15px;
+.description p {
+	font-size: 13px;
+	font-weight: 400;
+	color: hsl(220, 15%, 55%);
+	padding-top: 10px;
 }
-@media  (min-width : 375px) and (max-width : 1199px) {
-    .container {
-        
-        width: 100%;
-        height: 100vh;
-        margin: 0 auto;
-        padding: 80px 0;
-        box-shadow: none;
-    }
-    .box {
-        width: 80%;
-        box-shadow: none;
-        padding: 20px 0;
-    }
-    .code img {
-        width: 90%;
-    }
-    .desc {
-        padding: 25px 15px;
-    }
-    .desc h4 {
-        font-size: 25px;
-    }
-    .desc p {
-        font-size: 17px;
-        margin: 15px 20px 0 20px;
-    }
+@media (min-width: 375px) and (max-width: 1199px) {
+	.box {
+		width: 90%;
+		box-shadow: none;
+		padding: 20px 0;
+	}
+	.code img {
+		width: 90%;
+	}
+	.description {
+		padding: 15px;
+	}
 }
